--- a/teste.html
+++ b/teste.html
@@ -10,5 +10,6 @@
     <h1>Sistema  transportadora</h1>
     <h2>Transportadora ViaQuick</h2>
     <h3> A mais rapida da região</h3>
+    <h4> Esta alteraçoa foi feita e comitada diretamente no servidor</h4> 
 </body>
 </html>
